@@ -15,8 +15,6 @@ wrappers:
   * drag-and-drop for widgets (configurable...)
   * Perl build support integration?
   * Perl object lifetime problems? (eg Symbol)
-  * base library python bindings
-    * start w/enum wrappers
   * GTK and Qt perl bindings
   * C++ global wrappers
 
@@ -59,6 +57,7 @@ image formats:
 window:
   * add XShm support
   * X protocol error handling
+  * Direct2D
   * API to query used interface (video, window?) (/format?)
   * mode to preserve aspect ratio (default?)
   * simple image manipulations scale(xv?)/mirror
