@@ -33,9 +33,11 @@ if HAVE_POLL
 zbar_libzbar_la_SOURCES += zbar/processor/posix.h zbar/processor/posix.c
 endif
 if WIN32
-zbar_libzbar_la_SOURCES += zbar/processor/win.h zbar/processor/win.c
+zbar_libzbar_la_SOURCES += zbar/processor/win.h zbar/processor/win.c \
+    zbar/libzbar.rc
 zbar_libzbar_la_CPPFLAGS += -mthreads
 zbar_libzbar_la_LDFLAGS += -mthreads
+zbar_libzbar_la_LIBADD += zbar/libzbar-rc.lo
 endif
 
 if HAVE_V4L1
